2012-11-07  Romain Francois <romain@r-enthusiasts.com>

        * src/Language.cpp: Language gains a fast_eval method, without the whole try/catch
        * src/barrier.cpp: function char_nocheck to avoid the check in using CHAR
        * include/Rcpp/sugar/functions/unique.h: sugar unique and sort_unique
        using unordered_set (perhaps we could use it from c++11). 

2012-11-06  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: tweak whitespace in verbose mode
        * src/AttributesParser.h: support for interfaces attribute
        * src/AttributesParser.cpp: support for interfaces attribute
        * src/Attributes.cpp: support for interfaces attribute; refactor 
        code generators; use single module for exports; return list of
        updated files from compileAttributes
        * src/Module.cpp: add package parameter to GetCppCallable
        * include/Rcpp/Module.h: add package parameter to GetCppCallable
        * man/compileAttributes.Rd: documentation updates

2012-11-05  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Module.h: added class CppInheritedProperty to handle 
        inherited properties
        * include/Rcpp/module/class.h: implemented inheritance of properties

2012-11-05  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use modules for attribute code generation
        * src/Attributes.cpp: use modules for attribute code generation
        * src/AttributesParser.h: use modules for attribute code generation
        * src/AttributesParser.cpp: use modules for attribute code generation

2012-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* tests/doRUnit.R: In "development releases" (such as 0.9.15.5) we
	now default to setting the required CRAN-test-workaround-kludge
	"RunAllRcppTests" to "yes" as a default -- but not for actual
	releases (with versions such as 0.9.15)

2012-11-04  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/CppFunction.h: fixed module bug (virtual function